@@ -1,6 +1,7 @@
 Revision history for Getopt-Long
 
 {{$NEXT}}
+    - Allow enum values to be converted to enums
 
 0.3.4  2022-08-31T21:23:46+02:00
     - Correctly handle invalid value exceptions in enums and coercions
